see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Oct-2009 Andrew Eddie
 ! Reverted plugin edit form to last good state.
 ^ Renamed table jos_menu_template to jos_template_styles; refactored schema.
 ^ Renamed jos_menu.template_id to jos_menu.template_style_id.
 ^ Update milkyway template language file.
 ^ Update milkyway and bluestork manifest files.
 ^ Separated template styles from template file management/customisation.
 + Templates params now support multiple params groups (basic, advanced, etc).
 + Added ability to copy/clone an existing template style.
 ^ Fix JFormField::_getInputId so that it cleans out invalid characters in id's (like array brackets); fix getLabel to not recompute the id.
 ^ Refactored templates list.
 ^ Templates thumb shown, added modal popup (allowing bigger preview).
 ^ Replaced template edit form (now handled in styles) with mock control panel for editing files in the template.
 ^ Replaced reference to Beez with Atomic in installation SQL.

28-Oct-2009 Andrew Eddie
 ! Fix block and activation methods to com_users backend list.
 ^ Sync backend com_users MVC code structure.
 ^ Renamed JTableViewlevels to JTableViewlevel.
 ^ Renamed modal article selector field.

27-Oct-2009 Louis Landry
# Fixed failure of JUser to load JSON based parameter strings.
^ Changed default behavior of JHtml::date() to use user settings for time zones.
^ Added transparent handling of time zone translation for JForm / JFormFieldCalendar.

25-Oct-2009 Ron Severdia
^ Toolbar UI tweaks
+ New icons
+ New Bluestork CSS
+ Various missing language strings

25-Oct-2009 Ian MacLennan
 # Fixed progress bar image
 # Fixed media manager CSS image paths